--- a/frontend/src/app/components/success/success.component.html
+++ b/frontend/src/app/components/success/success.component.html
@@ -3,13 +3,13 @@
     <ion-row *ngIf="type !== 'finished'">
       <ion-col size="12">
         <ion-label *ngIf="type === 'success'" color="success" style="font-weight: bold;"><h1>PARABÉNS!!! 😎</h1></ion-label>
-        <ion-label *ngIf="type !== 'success'" color="danger" style="font-weight: bold;"><h1>NÃO FOI DESSA VEZ!!! 😕</h1></ion-label>
+        <ion-label *ngIf="type !== 'success'" style="font-weight: bold;color:#FA8072;"><h1>NÃO FOI DESSA VEZ!!! 😕</h1></ion-label>
       </ion-col>
     </ion-row>
     <ion-row *ngIf="type !== 'finished'">
       <ion-col size="12">
         <ion-label *ngIf="type === 'success'" color="success" style="font-weight: bold;"><h1>Você acertou na {{attempts}}ª tentativa! 🔥</h1></ion-label>
-        <ion-label *ngIf="type !== 'success'" color="danger" style="font-weight: bold;"><h1>A palavra correta é:</h1></ion-label>
+        <ion-label *ngIf="type !== 'success'" style="font-weight: bold;color:#FA8072;"><h1>A palavra correta é:</h1></ion-label>
       </ion-col>
     </ion-row>
     <ion-row *ngIf="type === 'finished'" style="margin-top: 30px;">
@@ -61,14 +61,14 @@
       <ion-col size="12">
         <ion-card>
           <ion-card-header>
-            <ion-card-title>
+            <ion-card-title style="color:white">
               Uso na frase
             </ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <p style="text-align:left !important;">{{font}}</p><br>
-            <p style="text-align:center;" *ngFor="let p of phrase">{{p}}</p><br>
-            <p style="text-align:left !important;">{{author}}</p><br>
+            <p style="text-align:left !important;color:white;">{{font}}</p><br>
+            <p style="text-align:center;color:white;" *ngFor="let p of phrase">{{p}}</p><br>
+            <p style="text-align:left !important;color:white;">{{author}}</p><br>
           </ion-card-content>
         </ion-card>
       </ion-col>
