--- a/frontend/src/app/pages/home/home.page.scss
+++ b/frontend/src/app/pages/home/home.page.scss
@@ -34,8 +34,7 @@
   flex-wrap: wrap;
   flex-grow: 1;
   overflow: hidden;
-  padding-top: 10px;
-
+  
   div {
     display: inline-flex !important;
   }
@@ -107,7 +106,7 @@
   font-weight: bold;
   border: 0;
   padding: 0;
-  height: 38px;
+  height: 30px;
   cursor: pointer;
   background-color: #D7C6AB;
   //background-color: #111D12;
@@ -118,6 +117,21 @@
   margin-right: 6px;
   border-radius: 4px;
   user-select: none;
+}
+
+.badge {
+  display: none;
+	border-radius: 50%;
+	width: 15px;
+	height: 15px;
+	position: absolute;
+	background: #32cd32;
+	border: 1px solid #32cd32;
+	align-items: center;
+	justify-content: center;
+	top: -5px;
+  right: -4px;
+	transition: all .3s;
 }
 
 .keyboard-row button.wide-button {
@@ -231,4 +245,3 @@ ol {
 ion-card {
   width: 100% !important;
 }
-
