v1 finishied (SSL + analitycs + docker + nginx + certificate COMODO

--- a/frontend/src/app/components/modal-info/modal-info.component.html
+++ b/frontend/src/app/components/modal-info/modal-info.component.html
@@ -10,7 +10,7 @@
     <ion-header translucent>
       <ion-toolbar>
         <ion-title slot="start" style="color:white">Info & Regras</ion-title>
-        <ion-buttons slot="start"><span style="color:white">V. BETA</span></ion-buttons>
+        <ion-buttons slot="start"><span style="color:white">{{version}}</span></ion-buttons>
         <ion-buttons slot="end">
           <ion-button (click)="closeModal()"><ion-icon name="close-circle-outline" style="color:white"></ion-icon></ion-button>
         </ion-buttons>
@@ -83,7 +83,7 @@
     <ion-footer>
       <ion-item>
         <ion-avatar slot="start">
-          <img src="assets/inspiration-male.png" />
+          <img src="assets/inspiration.png" />
         </ion-avatar>
         <ion-label style="padding-top:5px;">
           <h2>Inspirado no game <a href="https://term.ooo/" target="_blank"  style="margin-left:5px;">TERMO</a></h2>
