--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -38,6 +38,10 @@ ion-footer{
   --ion-background-color: #5c6e68; 
 }
 
+ion-card{
+  --background: #5c6e68; 
+}
+
 ion-toolbar{
   --background: #5c6e68; 
 }
