--- a/frontend/src/app/components/social-share/social-share.component.scss
+++ b/frontend/src/app/components/social-share/social-share.component.scss
@@ -9,6 +9,21 @@
   font-size: 2rem;
   font-weight: 500;
 }
+.words {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  line-height: 2em;
+  color: white;
+}
+.words p:first-child {
+  grid-row: 1;
+  grid-column: -1 / 2;
+}
+.words p:last-child {
+  grid-row: 2;
+  grid-column: -1 / 2;
+}
 .performance {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
