--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -2,22 +2,15 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-title size="small" class="pageTitle" style="text-align: center; color: #fff !important;">
-        <img src="assets/logo.png" style="width: 50px; height: 40px;"/>
+        <img src="assets/logo.png" style="width: 50px; height: 40px;" alt="letrando logo"/>
       </ion-title>
       <app-modal-info></app-modal-info>
     </ion-buttons>
     <ion-item-group slot="end" style="border: none !important;">
       
       <ion-item *ngIf="alreadyStarted" style="margin-right:5px;">
-        <!-- <ion-badge color="primary" mode="ios">✅ {{ totalSuccess }}</ion-badge> -->
         <span style="color: #fff !important">✅ {{ totalSuccess }}</span>
-        <!-- <span style="margin-left: 5px; color: #fff !important">x</span> -->
-        <!-- <ion-badge color="danger" mode="ios" style="margin-left:5px;">{{ totalErrors }}</ion-badge> -->
         <span style="margin-left: 10px; color: #fff !important">❌ {{ totalErrors }}</span>
-        <!-- <span style="margin-left: 5px; color: #fff !important">=</span> -->
-        <!-- <ion-badge color="success" mode="ios" style="margin-left: 5px;">{{ totalScore }}</ion-badge> -->
-        <!-- <span style="margin-left: 8px; color: #fff !important">🏆 {{ totalScore }}</span> -->
-        <!-- <ion-icon name="share-social-outline" style="padding-left:5px;padding-top:2px;cursor: pointer;" (click)="showShareOptions()"></ion-icon> -->
       </ion-item>
       <ion-item *ngIf="!alreadyStarted" style="display:none;">
         <ion-chip outline color="secondary" (click)="start()">
@@ -114,17 +107,9 @@
         <ion-grid>
           <ion-row>
             <ion-col size="12">
-              <!-- <span style="color:#fff !important">{{actualWord}}ª das {{words.length}} palavras do dia | <ion-badge color="light" mode="ios" style="margin-left: 5px">{{score}}</ion-badge> pontos</span><br> -->
               <span style="color:#fff !important">{{actualWord}}ª das {{words.length}} palavras do dia | <b>{{score}}</b> pontos</span><br>
             </ion-col>
           </ion-row>
-          <!-- <ion-row>
-            <ion-col size="12">
-              <ion-label style="display:flex;justify-content: center;">
-                <span style="margin-left:5px;color:#fff !important">pontos</span>
-              </ion-label>
-            </ion-col>
-          </ion-row> -->
         </ion-grid>
       </div>
       <div *ngFor="let num of limitAttemptsArray; let index = index" id="board_try{{num}}">
