changed alert for wrong, repeated and incomplete word typed

--- a/frontend/src/app/pages/home/home.page.scss
+++ b/frontend/src/app/pages/home/home.page.scss
@@ -151,6 +151,11 @@
   animation-duration: 2s;
 }
 
+.row-error-msg {
+  animation: shakeX;
+  animation-duration: 2s;
+}
+
 .hide {
   display: none !important;
 }
