--- a/frontend/src/app/components/success/success.component.html
+++ b/frontend/src/app/components/success/success.component.html
@@ -75,9 +75,7 @@
     </ion-row>
     <ion-row>
       <ion-col size="12">
-        <ion-button class="btn" (click)="closeModal()" fill="clear">
-          Fechar
-        </ion-button>
+        <ion-button shape="round" expand="block" color="primary" (click)="closeModal()">{{buttonTitle}}</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
