--- a/frontend/src/app/components/modal-info/modal-info.component.html
+++ b/frontend/src/app/components/modal-info/modal-info.component.html
@@ -1,5 +1,5 @@
 <ion-chip outline color="warning" id="triggerInfo">
-  <ion-icon name="information-circle-outline" style="margin-right:5px;"></ion-icon>
+  Info <ion-icon name="information-circle-outline" ></ion-icon>
 </ion-chip>
 <ion-modal trigger="triggerInfo"
   [breakpoints]="[0.1, 0.6, 1]"
