--- a/frontend/src/app/components/social-share/social-share.component.scss
+++ b/frontend/src/app/components/social-share/social-share.component.scss
@@ -30,16 +30,16 @@
   grid-template-columns: repeat(4, 1fr);
   text-align: center;
   line-height: 1em;
-  padding: 10px 0;
+  //padding: 10px 0;
   margin-top: 10px;
 }
 .performance b {
   grid-row: 1;
-  font-size: 2em;
+  font-size: 1.3em;
 }
 .performance p {
   grid-row: 2;
-  height: 2em;
+  height: 1.3em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,11 +63,11 @@
 }
 .average b {
   grid-row: 1;
-  font-size: 2em;
+  font-size: 1.3em;
 }
 .average p {
   grid-row: 2;
-  height: 2em;
+  height: 1.3em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -80,7 +80,7 @@
 .footer {
   display: flex;
   width: 100%;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 .logoList {
   display: flex;
@@ -89,11 +89,14 @@
   margin: 0;
 }
 .socialLogo {
-  padding-left: 10px;
+  padding-left: 5px;
 }
 #clipboard {
   border-radius: 8px;
   background-color: #5c6e68;
+}
+#clipboard h2 {
+  font-size: 1.3rem;
 }
 .custom-border {
   border-radius: 24px;
