linkedin link changed + fix to show or not the information 'uso na frase'

--- a/frontend/src/app/components/modal-info/modal-info.component.html
+++ b/frontend/src/app/components/modal-info/modal-info.component.html
@@ -111,7 +111,7 @@
           <div style="display:flex;justify-content: left;">
             <p>Fullstack Developer</p>
             <a href="https://github.com/flavio-fgjj" target="_blank"  style="margin-left:5px;"><ion-icon name="logo-github"></ion-icon></a>
-            <a href="https://www.linkedin.com/in/fl%C3%A1vio-de-almeida-alvarenga-82a2b177/" target="_blank" style="margin-left:5px;"><ion-icon name="logo-linkedin"></ion-icon></a>
+            <a href="https://www.linkedin.com/in/flavioaalvarenga/" target="_blank" style="margin-left:5px;"><ion-icon name="logo-linkedin"></ion-icon></a>
           </div>
         </ion-label>
       </ion-item>
