--- a/frontend/src/app/components/success/success.component.html
+++ b/frontend/src/app/components/success/success.component.html
@@ -57,7 +57,7 @@
         <ion-label *ngIf="type !== 'success'" color="danger" style="font-weight: bold;text-decoration: underline;"><h1>{{word}}</h1></ion-label>
       </ion-col>
     </ion-row>
-    <ion-row *ngIf="type !== 'finished'">
+    <ion-row *ngIf="type !== 'finished' && phrase.length > 0">
       <ion-col size="12">
         <ion-card>
           <ion-card-header>
