--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -147,7 +147,7 @@
           </ion-chip>
           <span style="margin-left: 8px; color: #fff !important">🏆 {{ totalScore }}</span>
           <ion-chip id="triggerHelp" outline color="warning" style="float: right; margin-right:5px;" data-toggle="tooltip" data-placement="bottom" title="Ajuda">
-            Obter Ajuda
+            Ver Dicas
             <ion-icon name="help-circle-outline" style="margin-left:5px;"></ion-icon>
           </ion-chip>
         </ion-col>
